...
      floatingActionButton = {
        ExtendedFloatingActionButton(
            modifier = Modifier.testTag("editProfileButton"),
            onClick = { navigationActions.navigateTo(Screen.EDIT_PROFILE) }) {
              Row {
...
) {
  Scaffold(
      modifier = Modifier.testTag("profileScaffold"),
      floatingActionButton = floatingActionButton,
      bottomBar = { BottomNavigationBarWithDivider(navigationActions) },
...
                    .padding(paddingValues)
                    .verticalScroll(rememberScrollState())
                    .testTag("profileScaffoldColumn"),
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally) {
...
        navigationIcon = {
          if (includeBackButton) {
            IconButton(onClick = onBackButtonClick, Modifier.testTag("goBackButton")) {
              Icon(imageVector = Icons.AutoMirrored.Outlined.ArrowBack, contentDescription = "Back")
            }
...
  // Display the user's profile information:
  if (user.value == null) {
    Text(stringResource(R.string.user_not_found_2), modifier = Modifier.testTag("userNotFound"))
  } else {
    ElevatedCard(
        modifier = Modifier.fillMaxSize().padding(40.dp).testTag("profileCard"),
        colors =
            CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.surfaceVariant)) {
...
          Column(
              modifier =
                  Modifier.padding(borderPadding).fillMaxWidth().testTag("profileCardColumn"),
              verticalArrangement = Arrangement.Center,
              horizontalAlignment = Alignment.CenterHorizontally) {
...
                      user.value!!.fullName(),
                      fontWeight = FontWeight(500),
                      modifier = Modifier.testTag("userFullName"))
                }
                Spacer(modifier = Modifier.height(5.dp))
...
                    fontWeight = FontWeight(400),
                    fontStyle = FontStyle.Italic,
                    modifier = Modifier.alpha(0.7f).testTag("userHandle"))
                Spacer(modifier = Modifier.height(10.dp))

...
                  Text(
                      stringResource(R.string.rating, user.value!!.rating),
                      modifier = Modifier.testTag("userRating"))
                }
                Spacer(modifier = Modifier.height(10.dp))
...
                  Text(
                      stringResource(R.string.member_since, user.value!!.dateToString()),
                      modifier = Modifier.testTag("userDateOfJoining"))
                }
                Spacer(modifier = Modifier.height(10.dp))
...
                Row {
                  OutlinedButton(
                      modifier = Modifier.testTag("followingButton"),
                      onClick = {
                        userViewModel.getFollowingFrom(
...
                        Text(
                            stringResource(R.string.following, user.value!!.friends.following.size),
                            modifier = Modifier.testTag("followingText"))
                      }
                  Spacer(modifier = Modifier.width(10.dp))
                  OutlinedButton(
                      modifier = Modifier.testTag("followersButton"),
                      onClick = {
                        userViewModel.getFollowersFrom(
...
                        Text(
                            stringResource(R.string.followers, user.value!!.friends.followers.size),
                            modifier = Modifier.testTag("followersText"))
                      }
                }
...
) {
  Row(
      modifier = Modifier.padding(8.dp).testTag("userItem").clickable { onClick() },
  ) {
    ThumbnailDynamicPic(user, fileViewModel)
...
          }
        },
        modifier = Modifier.padding(10.dp).testTag("userBio"))
  }
}
...
  Button(
      onClick = onClick,
      modifier = Modifier.testTag("logoutButton"),
      colors =
          ButtonDefaults.buttonColors(
...
  Button(
      onClick = onSendMessageClick,
      modifier = Modifier.testTag("sendMessageButton"),
      colors =
          ButtonDefaults.buttonColors(
...
